<resources>
    <!-- Application level -->
    <string name="app_name">LongJourney</string>
    <string name="title_activity_engage_battle">BattleEngageActivity</string>
    <string name="title_activity_battle_sneak">BattleSneakActivity</string>
    <string name="title_activity_battle">BattleFightActivity</string>
    <string name="title_activity_battle_conclusion">BattleConclusionActivity</string>

    <!-- Travel Activity -->
    <string name="travel_level">LV</string>
    <string name="travel_gold">G</string>
    <string name="travel_steps">Steps</string>
    <string name="travel_counter_default">99999</string>

    <!-- Battle Engage Activity -->
    <string name="engage_prompt">What will you do?</string>
    <string name="engage_option_fight">Fight</string>
    <string name="engage_option_sneak">Sneak</string>
    <string name="engage_option_run">Run</string>

    <!-- Battle Sneak Activity -->
    <string name="sneak_title">Which way?</string>
    <string name="sneak_option_left">left</string>
    <string name="sneak_option_right">right</string>

    <!-- Battle Fight Activity -->
    <string name="battle_monster_name_default">Slime</string>
    <string name="battle_player_identifier">You</string>
    <string name="battle_charge">You charge!</string>
    <string name="battle_caught">The monster notices you!</string>

    <!-- Battle Conclusion Activity -->
    <string name="conclusion_victory">You won!</string>
    <string name="conclusion_loss">You lost!</string>
    <string name="conclusion_sneak">You got away!</string>
    <string name="conclusion_run">You fled!</string>

    <!-- Unorganized -->
    <string name="zero">0</string>
    <string name="default_list_entry_text">Rainbows!</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
