<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/travel_layout_frame"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="32dp"
    tools:context="com.lchrislee.longjourney.activities.TravelActivity"
    tools:deviceIds="wear_round"
    >

    <TextView
        android:id="@+id/travel_text_level_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="2dp"
        android:text="@string/travel_level" />

    <TextView
        android:id="@+id/travel_text_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/travel_text_level_prompt"
        android:layout_marginStart="2dp"
        android:text="@string/travel_counter_default" />

    <TextView
        android:id="@+id/travel_text_gold_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:text="@string/travel_gold" />

    <TextView
        android:id="@+id/travel_text_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/travel_text_level"
        android:layout_toStartOf="@+id/travel_text_gold_prompt"
        android:layout_marginEnd="2dp"
        android:gravity="end"
        android:text="@string/travel_counter_default" />

    <TextView
        android:id="@+id/travel_text_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="end"
        android:text="@string/travel_counter_default" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/travel_text_steps"
        android:layout_toEndOf="@+id/travel_text_steps"
        android:layout_marginStart="2dp"
        android:gravity="start"
        android:text="@string/travel_steps" />

</RelativeLayout>