<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.lchrislee.longjourney.activities.TravelActivity"
    tools:deviceIds="wear_square">

    <TextView
        android:id="@+id/travel_text_level_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="2dp"
        android:textSize="20sp"
        android:text="@string/travel_level" />

    <TextView
        android:id="@+id/travel_text_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/travel_text_level_prompt"
        android:layout_marginStart="2dp"
        android:textSize="20sp"
        tools:text="@string/travel_counter_default" />

    <TextView
        android:id="@+id/travel_text_gold_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:textSize="20sp"
        android:text="@string/travel_gold" />

    <TextView
        android:id="@+id/travel_text_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/travel_text_level"
        android:layout_toStartOf="@+id/travel_text_gold_prompt"
        android:layout_marginEnd="2dp"
        android:gravity="end"
        android:textSize="20sp"
        tools:text="@string/travel_money_counter_default" />

    <TextView
        android:id="@+id/travel_text_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="end"
        android:textSize="20sp"
        tools:text="@string/travel_money_counter_default" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/travel_text_steps"
        android:layout_alignBottom="@+id/travel_text_steps"
        android:layout_toEndOf="@+id/travel_text_steps"
        android:layout_marginStart="2dp"
        android:gravity="start|center_vertical"
        android:textSize="16sp"
        android:text="@string/travel_steps" />

    <Button
        android:id="@+id/travel_button_temp_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:text="next"/>

</android.support.percent.PercentRelativeLayout>