<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context="com.lchrislee.longjourney.activities.BattleSneakActivity"
    tools:deviceIds="wear_round"
    >

    <ImageView
        android:id="@+id/sneak_image_monster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        tools:src="@drawable/slime"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/sneak_layout_direction"
        android:text="@string/sneak_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/red"
        />

    <LinearLayout
        android:id="@+id/sneak_layout_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/sneak_button_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sneak_option_left"
            android:textColor="@color/red"
            android:textSize="16sp"
            style="?android:borderlessButtonStyle"
            />

        <Button
            android:id="@+id/sneak_button_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sneak_option_right"
            android:textColor="@color/blue"
            android:textSize="16sp"
            style="?android:borderlessButtonStyle"
            />

    </LinearLayout>

</RelativeLayout>
