<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context="com.lchrislee.longjourney.activities.BattleEngageActivity"
    tools:deviceIds="wear_square"
    >

    <TextView
        android:id="@+id/battle_text_monster_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        tools:text="@string/battle_monster_name_default" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/battle_text_monster_name"
        android:layout_toStartOf="@+id/battle_text_monster_level"
        android:layout_marginEnd="2dp"
        android:gravity="end"
        android:textSize="20sp"
        android:text="@string/travel_level" />

    <TextView
        android:id="@+id/battle_text_monster_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:textSize="20sp"
        tools:text="@string/travel_counter_default" />

    <ImageView
        android:id="@+id/battle_image_monster"
        tools:src="@drawable/slime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/battle_progress_monster"
        android:layout_above="@+id/battle_text_player_identifier"
        android:scaleType="fitCenter"/>

    <ProgressBar
        android:id="@+id/battle_progress_monster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/battle_text_monster_name"
        tools:progress="10"
        android:max="100"
        android:clickable="false"
        android:focusable="false"
        android:longClickable="false"
        style="?android:attr/progressBarStyleHorizontal" />

    <ImageView
        android:id="@+id/battle_image_player"
        tools:src="@drawable/rubber_chicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/battle_text_player_identifier"
        android:layout_below="@+id/battle_progress_monster"
        android:scaleType="fitCenter"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/battle_text_player_identifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:textSize="20sp"
        android:text="@string/battle_player_identifier" />

    <ProgressBar
        android:id="@+id/battle_progress_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/battle_text_player_identifier"
        android:layout_marginStart="2dp"
        android:layout_alignTop="@+id/battle_text_player_identifier"
        android:layout_alignBottom="@+id/battle_text_player_identifier"
        android:foregroundGravity="center_vertical"
        tools:progress="10"
        android:max="100"
        android:clickable="false"
        android:focusable="false"
        android:longClickable="false"
        style="?android:attr/progressBarStyleHorizontal" />

    <android.support.wearable.view.DelayedConfirmationView
        android:id="@+id/battle_delay_timer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:circle_border_color="@color/blue"
        app:circle_border_width="12dp"
        app:circle_radius="85dp"
        />

</RelativeLayout>